minor: refactor